Ensure adequate contrast between background and logged out links when in signup.

--- a/client/components/logged-out-form/style.scss
+++ b/client/components/logged-out-form/style.scss
@@ -56,3 +56,16 @@
 		top: 3px;
 	}
 }
+
+.is-section-signup .logged-out-form__link-item {
+	color: $white;
+
+	&:visited {
+		color: $white;
+	}
+
+	&:hover {
+		color: $white;
+		text-decoration: underline;
+	}
+}
